<?xml version="1.0"?>
<package format="2">
  <name>caster_robot</name>
  <version>1.1.0</version>
  <description>The caster_robot package</description>

  <maintainer email="ye@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/CasterLab/caster</url>
  <url type="repository">https://github.com/CasterLab/caster</url>
  <url type="bugtracker">https://github.com/CasterLab/caster/issues</url>

  <author email="ye@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>caster_auto_charge</exec_depend>
  <exec_depend>caster_base</exec_depend>
  <exec_depend>caster_control</exec_depend>
  <exec_depend>caster_navigation</exec_depend>

  <exec_depend>caster_msgs</exec_depend>
  <exec_depend>caster_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
